# TaskManagement/openapi/api.yaml
@@ -11,6 +11,10 @@ tags:
     description: Operations related to tasks
   - name: Auth
     description: Operations related to authentication
+  - name: User
+    description: Operations related to users
+  - name: Role
+    description: Operations related to roles
 
 paths:
   /auth/register:
@@ -25,7 +29,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/AuthRequestDTO"
+              $ref: "#/components/schemas/UserRegisterRequestDTO"
       responses:
         "201":
           description: Created
@@ -65,7 +69,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/AuthLoginRequestDTO"
+              $ref: "#/components/schemas/UserLoginRequestDTO"
       responses:
         "200":
           description: Successful login
@@ -106,7 +110,401 @@ paths:
                 example:
                   message: "Internal server error"
                   code: 500
-
+  /users:
+    get:
+      summary: GET endpoint for getting all users
+      operationId: getUsers
+      tags:
+        - User
+      responses:
+        "200":
+          description: All users retrieved successfully
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/UserResponseDTO"
+        "400":
+          description: Bad request
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponseDTO"
+        "401":
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponseDTO"
+        "403":
+          description: Forbidden
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponseDTO"
+        "404":
+          description: Not found
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponseDTO"
+        "500":
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponseDTO"
+  /users/{userId}:
+    get:
+      summary: GET endpoint for getting a user by ID
+      operationId: getUserById
+      tags:
+        - User
+      parameters:
+        - name: userId
+          in: path
+          required: true
+          description: ID of the user to retrieve
+          schema:
+            type: integer
+            format: int64
+      responses:
+        "200":
+          description: User retrieved successfully
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/UserResponseDTO"
+        "400":
+          description: Bad request
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponseDTO"
+        "401":
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponseDTO"
+        "403":
+          description: Forbidden
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponseDTO"
+        "404":
+          description: User not found
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponseDTO"
+        "500":
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponseDTO"
+    put:
+      summary: PUT endpoint for updating an existing user
+      tags:
+        - User
+      operationId: updateUser
+      parameters:
+        - name: userId
+          in: path
+          required: true
+          description: ID of the user to update
+          schema:
+            type: integer
+            format: int64
+      requestBody:
+        required: true
+        description: User object with updated details
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/UserRegisterRequestDTO"
+      responses:
+        "200":
+          description: User updated successfully
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/UserResponseDTO"
+        "400":
+          description: Bad request
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponseDTO"
+        "401":
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponseDTO"
+        "403":
+          description: Forbidden
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponseDTO"
+  /users/{userId}/roles:
+    post:
+      summary: Assign a role to a user
+      tags:
+        - User
+      operationId: assignRoleToUser
+      parameters:
+        - name: userId
+          in: path
+          required: true
+          schema:
+            type: integer
+            format: int64
+          description: ID of the user to assign the role to
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              required:
+                - role
+              properties:
+                roleName:
+                  type: string
+                  description: Name of the role to assign
+      responses:
+        "200":
+          description: Role assigned successfully
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/UserResponseDTO"
+        "400":
+          description: Bad request
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponseDTO"
+        "401":
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponseDTO"
+        "403":
+          description: Forbidden
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponseDTO"
+        "404":
+          description: Not found
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponseDTO"
+        "500":
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponseDTO"
+  /roles:
+    get:
+      summary: GET endpoint for getting all roles
+      operationId: getRoles
+      tags:
+        - Role
+      responses:
+        "200":
+          description: All roles retrieved successfully
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/RoleResponseDTO"
+        "400":
+          description: Bad request
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponseDTO"
+        "401":
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponseDTO"
+        "403":
+          description: Forbidden
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponseDTO"
+        "404":
+          description: Not found
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponseDTO"
+        "500":
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponseDTO"
+    post:
+      summary: POST endpoint for creating a new role
+      tags:
+        - Role
+      operationId: createRole
+      requestBody:
+        required: true
+        description: Role object that needs to be added
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/RoleRequestDTO"
+      responses:
+        "201":
+          description: Created
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/RoleResponseDTO"
+        "400":
+          description: Bad request
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponseDTO"
+        "401":
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponseDTO"
+        "403":
+          description: Forbidden
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponseDTO"
+        "404":
+          description: Not found
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponseDTO"
+        "500":
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponseDTO"
+  /roles/{roleId}:
+    get:
+      summary: GET endpoint for getting a role by ID
+      operationId: getRoleById
+      tags:
+        - Role
+      parameters:
+        - name: roleId
+          in: path
+          required: true
+          description: ID of the role to retrieve
+          schema:
+            type: integer
+            format: int64
+      responses:
+        "200":
+          description: Role retrieved successfully
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/RoleResponseDTO"
+        "400":
+          description: Bad request
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponseDTO"
+        "401":
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponseDTO"
+        "403":
+          description: Forbidden
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponseDTO"
+        "404":
+          description: Role not found
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponseDTO"
+        "500":
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponseDTO"
+    delete:
+      summary: DELETE endpoint for deleting a role
+      tags:
+        - Role
+      operationId: deleteRole
+      parameters:
+        - name: roleId
+          in: path
+          required: true
+          description: ID of the role to delete
+          schema:
+            type: integer
+            format: int64
+      responses:
+        "204":
+          description: Role deleted successfully
+        "400":
+          description: Bad request
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponseDTO"
+        "401":
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponseDTO"
+        "403":
+          description: Forbidden
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponseDTO"
+        "404":
+          description: Role not found
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponseDTO"
+        "500":
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponseDTO"
   /tasks:
     get:
       summary: GET  endpoint for get all tasks
@@ -392,7 +790,7 @@ components:
         code:
           type: integer
           example: 500
-    AuthRequestDTO:
+    UserRegisterRequestDTO:
       type: object
       required:
         - username
@@ -411,7 +809,7 @@ components:
           type: string
           example: "user@gmail.com"
           x-field-extra-annotation: "@NotEmpty(message = \"Email cannot be null or empty\")"
-    AuthLoginRequestDTO:
+    UserLoginRequestDTO:
       type: object
       required:
         - username
@@ -425,12 +823,50 @@ components:
           type: string
           example: "password123"
           x-field-extra-annotation: "@NotEmpty(message = \"Password cannot be null or empty\")"
+    UserResponseDTO:
+      type: object
+      properties:
+        username:
+          type: string
+          example: "user123"
+        email:
+          type: string
+          example: user@gmail.com"
+        id:
+          type: integer
+          format: int64
+        roles:
+          type: array
+          items:
+            $ref: "#/components/schemas/RoleResponseDTO"
     AuthResponseDTO:
       type: object
       properties:
+        username:
+          type: string
+          example: "user123"
+        email: 
+          type: string
+          example: user@gmail.com"
         token:
           type: string
           example: "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9..."
+    RoleRequestDTO:
+      type: object
+      properties:
+        name:
+          type: string
+          example: "Admin"
+          x-field-extra-annotation: "@NotEmpty(message = \"Role name cannot be null or empty\")"
+    RoleResponseDTO:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+        name:
+          type: string
+          example: "Admin"
     TaskResponseDTO:
       type: object
       properties:
@@ -458,8 +894,12 @@ components:
           type: integer
           format: int64
         createdBy:
-          type: integer
-          format: int64
+          type: object
+          properties:
+            email:
+              type: string
+            username:
+              type: string
         createdAt:
           type: string
           format: date-time
