# TaskManagement/src/main/java/com/uit/tms/TaskManagement/controller/AuthController.java
@@ -5,10 +5,10 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
 
 import com.uit.tms.TaskManagement.api.AuthApi;
-import com.uit.tms.TaskManagement.model.AuthLoginRequestDTO;
-import com.uit.tms.TaskManagement.model.AuthRequestDTO;
 import com.uit.tms.TaskManagement.model.AuthResponseDTO;
-import com.uit.tms.TaskManagement.service.impl.AuthServiceImpl;
+import com.uit.tms.TaskManagement.model.UserLoginRequestDTO;
+import com.uit.tms.TaskManagement.model.UserRegisterRequestDTO;
+import com.uit.tms.TaskManagement.service.AuthService;
 
 import jakarta.validation.Valid;
 import lombok.RequiredArgsConstructor;
@@ -17,18 +17,19 @@ import lombok.RequiredArgsConstructor;
 @RequiredArgsConstructor
 public class AuthController implements AuthApi {
 
-    private final AuthServiceImpl authService;
+    private final AuthService authService;
 
 	@Override
-	public ResponseEntity<AuthResponseDTO> login(@Valid AuthLoginRequestDTO authRequestDTO) throws Exception {
+	public ResponseEntity<AuthResponseDTO> login(@Valid UserLoginRequestDTO authRequestDTO) throws Exception {
 		return ResponseEntity.ok(authService.authenticate(authRequestDTO));
 	}
 
 	@Override
-	public ResponseEntity<Void> register(@Valid AuthRequestDTO authRequestDTO) throws Exception {
+	public ResponseEntity<Void> register(@Valid UserRegisterRequestDTO authRequestDTO) throws Exception {
 		boolean registerSuccess = authService.register(authRequestDTO);
 		return registerSuccess ? 
 				ResponseEntity.status(HttpStatus.CREATED).build() : 
 				ResponseEntity.status(HttpStatus.BAD_REQUEST).build();
 	}
+
 }
